Fix oversized buiac logo on firefox.

--- a/css/main.scss
+++ b/css/main.scss
@@ -306,6 +306,10 @@ blockquote p {
   }
 }
 
+.promo--alt a {
+  max-width: 100%;
+}
+
 .promo--alt img {
   margin: 0;
 }
